--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pypdf = "^4.2.0"
 azure-search-documents = "^11.4.0"
 azure-identity = "^1.16.0"
 pandas = "^2.2.2"
+streamlit = "^1.33.0"
 
 
 [tool.poetry.group.dev.dependencies]
