--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ azure-search-documents = "^11.4.0"
 azure-identity = "^1.16.0"
 pandas = "^2.2.2"
 streamlit = "^1.33.0"
+pymupdf = "^1.24.2"
 
 
 [tool.poetry.group.dev.dependencies]
