--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ azure-search-documents = "^11.4.0"
 azure-identity = "^1.16.0"
 pandas = "^2.2.2"
 streamlit = "^1.33.0"
+fpdf = "^1.7.2"
 pymupdf = "^1.24.2"
-fitz = "^0.0.1.dev2"
 
 
 [tool.poetry.group.dev.dependencies]
