--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pandas = "^2.2.2"
 streamlit = "^1.33.0"
 fpdf = "^1.7.2"
 pymupdf = "^1.24.2"
+langchain-core = "^0.1.52"
 
 
 [tool.poetry.group.dev.dependencies]
