--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ streamlit = "^1.33.0"
 fpdf = "^1.7.2"
 pymupdf = "^1.24.2"
 langchain-core = "^0.1.52"
+requests = "^2.32.2"
+beautifulsoup4 = "^4.12.3"
+ipykernel = "^6.29.4"
+pdfkit = "^1.0.0"
+wkhtmltopdf = "^0.2"
+fpdf2 = "^2.7.9"
+python-docx = "^1.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
