--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ wkhtmltopdf = "^0.2"
 fpdf2 = "^2.7.9"
 python-docx = "^1.1.2"
 fpdf = "^1.7.2"
+pypdf = "^4.2.0"
+openpyxl = "^3.1.4"
+matplotlib = "^3.9.0"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
